# ProjectTemplate

./: .gitignore  CMakeLists.txt  CopySrc.cmake  README.md  setup.py
data/: FBThrift.json  FBThriftHtml.json  HTML.json  VanillaCpp.json
docs/: DetailedIntro.md
lib/: Build.py  Config.py  CreateCPPProject.py  DependencyResolver.py  FBThrift.py  Package.py  PackageDownloader.py  PackageInstaller.py  Utils.py  __init__.py
lib/package/: Package.py  SnapPart.py
lib/utils/: Config.py  Utils.py
libs/: AddProject.py  Build.py  BuildProject.py  Cpp.py  CreateCPPProject.py  CreateProject.py  CreateResources.py  FBThrift.py  HTML.py  MakePackage.py  Project.py  Utils.py
modules/: __init__.py
modules/bootstrap/: DependencyResolver.py  PackageDownloader.py  PackageInstaller.py
modules/config/: Config.py  Log.py
modules/package/: Package.py  SnapCMake.py  SnapPart.py
modules/workflow/: Main.py  Workflow.py
tst/: Mocks.py  TestBuild.py  TestConfig.py  TestDependencyresolver.py  TestPackage.py  TestPackageDownloader.py  TestPackageInstaller.py  __init__.py
tst/bootstrap/: TestDependencyResolver.py  TestPackageDownloader.py  TestPackageInstaller.py
tst/config/: TestConfig.py  TestLog.py
tst/features/: CppWorkflow.feature
tst/package/: TestPackage.py  TestSnapCMake.py  TestSnapPart.py
tst/steps/: ExecutionSteps.py  (+2 more)
tst/testprojects/b/: CMakeLists.txt  md.json
tst/testprojects/b/headers/: b.h
tst/testprojects/b/lib/: CMakeLists.txt  libb.cc
tst/testprojects/main/: CMakeLists.txt  md.json
tst/testprojects/main/src/: CMakeLists.txt  binm.cc
(+13 files in other folders)
